Add more periods to the endnotes
lol how do I CMS

--- a/fonts.tex
+++ b/fonts.tex
@@ -85,7 +85,7 @@ The former gernally uses system libraries---such as FontConfig on Linux---to
 locate files, given a typeface's name.
 The latter has its own font loader,
 based on code from FontForge.\punckern\endnote{\textit{\LuaTeX{} Reference}
-(February 2017, Version 1.0.4), 10}
+(February 2017, Version 1.0.4), 10.}
 The expected name of a font might differ between the two engines---refer
 to the \texttt{fontspec} manual for details.}
 However, many typefaces come in more than two weights---some versions of Futura,
