--- a/history.tex
+++ b/history.tex
@@ -145,5 +145,5 @@ The \LuaTeX{} authors, on the other hand, hand-translated Knuth's Pascal into C,
 and have been using the resulting code since 2009.\punckern\endnote{%
 Taco Hoekwater, \textit{\LuaTeX says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
-\url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
+\url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}.}
 
