Follow own advice; GOTO BED

--- a/fonts.tex
+++ b/fonts.tex
@@ -249,8 +249,8 @@ be combined with capital letters:
 The terms \introduce{proportional} and \introduce{tabular} refer to spacing.
 Tabular figures are set with a uniform width, such that 1 takes up
 the same space as 8.
-As their name might suggest, this is great for tables,
-where figures must line up with the ones above and below them in their column:}
+As their name suggests, this is great for tables and other scenarios
+where figures must line up with the ones above and below them:}
 \begin{leftfigure}
 \addfontfeature{Numbers={Tabular,LowercaseOff}}
 \begin{tabular}{l|c r}
