--- a/history.tex
+++ b/history.tex
@@ -95,7 +95,8 @@ The most recent version, 3.14159265, came out in January~2014.
 
 \item[pdf\TeX] is an extension of \TeX{} that provides direct \acronym{pdf}
     output (instead of \TeX's \acronym{dvi}),
-    native support for PostScript\footnote{Specifically, PostScript Type 1}
+    native support for PostScript\footnote{%
+    \addfontfeature{Numbers=Uppercase}Specifically, PostScript Type 1}
     and TrueType fonts,
     and micro-typographic features discussed in this book's Microtype chapter.
     It was originally developed by
