--- a/fonts.tex
+++ b/fonts.tex
@@ -163,6 +163,7 @@ All of these features can be specified as an optional argument to
 \verb|\setmainfont| and friends.
 They can also be set for the current group with
 \verb|\addfontfeature|.
+Lets's touch on a few common ones.
 
 \subsection{Ligatures}
 
@@ -308,4 +309,13 @@ and
 \,}
 are too light and narrow compared to the surrounding type.)
 
-\subsection{Stylistic alternates}
+\section{What Next?}
+\begin{itemize}
+\item Learn about more OpenType features supported through \texttt{fontspec},
+such as stylistic sets and alternatives.
+\item Experiment with letter spacing---or \introduce{tracking}---with
+    the \texttt{LetterSpace} option.
+    Extra tracking is unnecessary in most cases,
+    but can be useful to make \textsc{small caps}
+    a bit more \acronym{readable}.
+\end{itemize}
