--- a/math.tex
+++ b/math.tex
@@ -3,7 +3,7 @@
 \LaTeX{} is excellent at typesetting mathematics, both inline with body text,
 e.g., $x_n^2+y_n^2=r^2$, and as standalone formulas:
 \[\sum_{n=0}^{\infty} \frac{f^{(n)} (a)}{n!} (x - a)^n\]
-The former can be created with \verb|$...$| or \verb|\(...\)|,
+The former is created with \verb|$...$| or \verb|\(...\)|,
 and the latter with \verb|\[...\]|.
 Inside these environments, the rules of \LaTeX{} change:
 \begin{itemize}
