--- a/structure.tex
+++ b/structure.tex
@@ -59,7 +59,7 @@ should get you a \textsc{pdf} that reads
 Like other commands, \verb|\usepackage| can take optional arguments.
 The \texttt{geometry} package, for instance,
 takes the desired paper size and margins.
-For \acronym{us} letter paper with one-inch margins, you could type:
+For \acronym{us} letter paper with one-inch margins, you would type:
 \begin{leftfigure}
 \begin{lstlisting}
 \usepackage[letterpaper,
