--- a/why.tex
+++ b/why.tex
@@ -80,7 +80,7 @@ However, it comes with a few advantages:
     \begin{itemize}
     \item Document sources can be read and understood with any text editor.
     \item Content can be easily generated programmatically.
-    \item Changes can be easily tracked with version control software.
+    \item Changes are easily tracked with version control software.
     \end{itemize}
 \end{enumerate}
 
