--- a/fonts.tex
+++ b/fonts.tex
@@ -51,7 +51,7 @@ Hello, Source type family! Neat---no? \\
 \end{leftfigure}
 should produce something like:\footnote{Assuming, of course,
 that you have Adobe's open-source fonts installed.\punckern\endnote{Adobe's
-open-source type can be found freely at \url{https://github.com/adobe-fonts}.}}
+open-source type is freely available at \url{https://github.com/adobe-fonts}.}}
 \begin{leftfigure}
 \fontspec[Ligatures=TeX]{Source Serif Pro} Hello, Source type family! Neat---no? \\
 \fontspec[Ligatures=TeX]{Source Sans Pro} Let's try sans serif! \\
