--- a/international.tex
+++ b/international.tex
@@ -1,7 +1,7 @@
 \chapter{Typographie Internationale}
 
 Surprisingly, many languages besides English exist.
-You might want to write with them.
+You may want to write with them.
 
 \section{Unicode}
 
