Keep working on layout, use LM in more examples

--- a/fonts.tex
+++ b/fonts.tex
@@ -250,7 +250,7 @@ Sitting cross-legged on the floor\ldots{} 25 or 6 to 4?
 For body text, either is a fine choice, but oldstyle figures shouldn't
 be combined with capital letters:
 \begin{leftfigure}
-``F-15C'' looks odd, as does ``Best Of 2007''\quotekern.
+``F-15C'' looks odd, as does ``Version 2.3 Release''\quotekern.
 \end{leftfigure}
 
 {\addfontfeature{Numbers=LowercaseOff}
