--- a/math.tex
+++ b/math.tex
@@ -24,7 +24,7 @@ From
 \end{lstlisting}
 \end{leftfigure}
 we get:
-\[\text{fake formulas} = \textbf{annoyed mathematicians}\]
+\[\text{\lm fake formulas} = \textbf{\lm annoyed mathematicians}\]
 
 \section{Examples}
 
