--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -20,7 +20,7 @@ You probably don't want to make \texttt{<width>} larger than an em or two.}
 If that doesn't work, try tweaking the paragraph's wording.
 This can be frustrating, but the alternative is for \LaTeX{} to create spacing
 that is too loose---where\enspace
-words\enspace have\enspace large\quad gaps\enspace bewtween\enspace
+words\enspace have\enspace large\quad gaps\enspace between\enspace
 them---or too tight, where\! words\! are\! uncomfortably\! crammed\! together.
 
 \section{Handling syntax errors}
