Remove period from end of endnotes
This might be CMS heresy, but it makes a lot of sense when some of the
notes end in URLs. Let's not make the user guess if the period is part
of them.

--- a/back.tex
+++ b/back.tex
@@ -41,7 +41,9 @@ Available at \url{https://practicaltypography.com}
 \theendnotes
 }
 
-\chapter{Colophon}
+% Redefine cleardoublepage so the Colophon doesn't demand a front page.
+% From https://tex.stackexchange.com/a/24068/92465
+{\let\cleardoublepage\clearpage \chapter{Colophon}}
 
 This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
 Robert Slimbach,
