--- a/history.tex
+++ b/history.tex
@@ -21,7 +21,7 @@ so publishers had replaced it with phototypesetting,
 which works by projecting images of characters onto film.
 The new technology, while much cheaper and faster,
 didn't provide the same level of quality Knuth had come to
-expect.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5.}
+expect.\punckern\endnote{Knuth, \textit{Digital Typography} (Stanford, 1999), 3--5}
 
 The average author would have resigned themselves to this change and moved on,
 but Knuth took great pride in print quality,
@@ -37,7 +37,7 @@ often refer to seemingly unrelated tasks needed to solve their main problem
 as ``yak shaving''\quotekern. The phrase is thought to originate from an episode
 of \textit{The Ren~\&~Stimpy Show}.\endnote{``yak shaving''\quotekern,
 \textit{The Jargon File},
-\url{http://www.catb.org/~esr/jargon/html/Y/yak-shaving.html}.}}
+\url{http://www.catb.org/~esr/jargon/html/Y/yak-shaving.html}}}
 of all time.
 For years, he paused all work on his books to create his own
 digital typesetting system.
@@ -46,7 +46,7 @@ When the dust settled in 1978, Knuth had the first version of
 ``\textbf{tech}nician''\quotekern. It is short for the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
 meaning \introduce{art} or \introduce{craft}.\endnote{Knuth,
-\textit{The \TeX book}, 1.}}
+\textit{The \TeX book}, 1}}
 
 It's hard to appreciate how much of a revolution \TeX\ was,
 especially looking back from a time where anybody with a copy
@@ -146,5 +146,5 @@ The \LuaTeX{} authors, on the other hand, hand-translated Knuth's Pascal into C,
 and have been using the resulting code since 2009.\punckern\endnote{%
 Taco Hoekwater, \textit{\LuaTeX says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
-\url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}.}
+\url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
 
