--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -12,7 +12,7 @@ Combined with its ability to automatically hyphenate words,
 which allows line breaks in many more places,\punckern\endnote{%
 Franklin Mark Liang,
 \textit{Word Hy-phen-a-tion by Com-put-er} (Standford, 1983),
-\url{http://www.tug.org/docs/liang/}.}
+\url{http://www.tug.org/docs/liang/}}
 this produces some of the best paragraph layout available.
 
 Sometimes we don't want to justify our text, though.
