--- a/why.tex
+++ b/why.tex
@@ -101,12 +101,13 @@ Typography is a tool to do so---a good design doesn't ``look nice''
 only for the sake of art---it draws readers in.\punckern\endnote{Matthew Butterick,
 ``Typography for Docs''
 (presented at the Write The Docs Conference, April 8, 2013),
-\url{https://www.youtube.com/watch?v=8J6HuvosP0s}.}
+\url{https://www.youtube.com/watch?v=8J6HuvosP0s}}
 %Matthew Butterick's \textit{Practical Typography} calls it
 %``the visual component of the written word.\quotekern''
 It sets their expectations and establishes a subliminal ``brand'' for your
 work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
-(presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014), \url{https://www.youtube.com/watch?v=ggQpDu63kk0}.}
+(presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
+\url{https://www.youtube.com/watch?v=ggQpDu63kk0}}
 It's the \emph{how} of text.
 \begin{leftfigure}
 \fontspec{TeX Gyre Termes}\fontsize{12pt}{24pt}\selectfont\raggedright
