--- a/hello.tex
+++ b/hello.tex
@@ -241,7 +241,7 @@ Yet we should not pass up our opportunities in that critical 3\%.
 \end{quote}
 \end{lstlisting}
 \end{leftfigure}
-gives us:
+gives us
 \begin{leftfigure}
 \lm
 Donald Knuth once wrote,
