--- a/international.tex
+++ b/international.tex
@@ -76,7 +76,7 @@ Dexter cried,
 \end{french}
 \end{lstlisting}
 \end{leftfigure}
-gives:\footnote{Yes, it's \emph{omelette au fromage}.
+gives\footnote{Yes, it's \emph{omelette au fromage}.
 Direct all complaints to Cartoon Network.}
 \begin{leftfigure}
 \lm%
