--- a/math.tex
+++ b/math.tex
@@ -23,7 +23,7 @@ From
 \[\text{fake formulas} = \textbf{annoyed mathematicians}\]
 \end{lstlisting}
 \end{leftfigure}
-we get:
+we get
 \[\text{\lm fake formulas} = \textbf{\lm annoyed mathematicians}\]
 
 \section{Examples}
