--- a/textformatting.tex
+++ b/textformatting.tex
@@ -52,7 +52,7 @@ Command & ``Switch'' version & Style \\
 \end{leftfigure}
 The command forms (which take the text to format as an argument)
 should usually be preferred over the switch versions
-(which effect the group in which they are issued)
+(which affect the group in which they are issued)
 because the former automatically handle any
 spacing corrections needed around them.\punckern\footnote{For example,
 \textit{italicized text} amidst upright text should be followed
@@ -113,7 +113,8 @@ Since this requires much more work from the type designer,
 many digital typefaces---even professional ones---lack this
 feature.\punckern\footnote{If you are fortunate enough \emph{to} have
 a typeface with multiple optical sizes, \XeLaTeX{}
-and \LuaLaTeX{} can make good use of them! See \chapref{fonts}.}
+and \LuaLaTeX{} can make good use of them! See \chapref{fonts}
+for more on font selection.}
 
 Points and optical sizes don't tell the whole story.
 Each font has its own proportions, which can make a huge difference
