--- a/back.tex
+++ b/back.tex
@@ -46,11 +46,11 @@ Available at \url{https://practicaltypography.com}
 {\let\cleardoublepage\clearpage \chapter{Colophon}}
 
 This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
-Robert Slimbach,
+Robert Slimbach.
 His revival is based on the Roman type of
 the \otford{16}{th} century French
 punchcutter Claude Garamond.
-Italics are based on the work of his contemporary Robert Granjon.
+Italics are inspired by work of Garamod's contemporary Robert Granjon.
 A few glyphs---such as the historical long s---were borrowed from
 Georg Duffner's EB~Garamond.
 
@@ -83,7 +83,7 @@ a type family by Google that covers \emph{every} language
 in the Unicode standard.
 
 Finally,
-Latin Modern---the OpenType version of Knuth's Computer Modern used throughout
+{\lm Latin Modern}---the OpenType version of Knuth's Computer Modern used throughout
 the book---as well
 as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
 free alternative to Times Roman seen on page \pageref{typography}---are from
