--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -41,7 +41,7 @@ And this text is flush right.
 \end{flushright}
 \end{lstlisting}
 \end{leftfigure}
-sets:
+sets
 \begin{leftfigure}
 \fbox{%
 \begin{minipage}{0.7\textwidth}
@@ -79,7 +79,7 @@ With:
 \end{itemize}
 \end{lstlisting}
 \end{leftfigure}
-you get:
+you get
 \begin{leftfigure}
 \lm%
 \begin{itemize}[leftmargin=*]
@@ -100,7 +100,7 @@ you get:
 \end{enumerate}
 \end{lstlisting}
 \end{leftfigure}
-produces:
+produces
 \begin{leftfigure}
 \lm%
 \begin{enumerate}[leftmargin=*]
@@ -130,7 +130,7 @@ emphasized text, or \introduce{label}:
 \end{description}
 \end{lstlisting}
 \end{leftfigure}
-gives us:
+gives us
 \begin{leftfigure}
 \begin{minipage}{0.8\textwidth}
 \lm%
@@ -175,7 +175,7 @@ so each column is about the same height.
 \end{multicols}
 \end{lstlisting}
 \end{leftfigure}
-is split into:
+is split into
 \begin{leftfigure}
 \lm%
 One nice feature of \texttt{multicol} is that you can
