Work on microtype, needs a bit more

--- a/history.tex
+++ b/history.tex
@@ -64,7 +64,7 @@ By tweaking the parameters of these pens and strokes, one can build entire
 font families from the same base designs.}
 Perhaps most importantly, Knuth and his graduate students designed algorithms
 to automatically hyphenate and justify lines of text into
-beautifully-typeset paragraphs.\footnote{These same algorithms went
+beautifully-typeset paragraphs.\punckern\footnote{These same algorithms went
 on to influence the ones Adobe uses in its software today.\punckern\endnote{%
 Several sources (\url{http://www.tug.org/whatis.html},
 \url{https://tug.org/interviews/thanh.html},
@@ -100,10 +100,10 @@ The most recent version, 3.14159265, came out in January~2014.
     and TrueType fonts,
     and micro-typographic features discussed in this book's Microtype chapter.
     It was originally developed by
-    Hàn Th\rlap{ê}\raisebox{0.2ex}{\,´} Thành
+    \htt{}
     as part of his PhD thesis
     for Masaryk University in Brno, Czech Republic.\punckern\endnote{%
-    Hàn Th\rlap{ê}\raisebox{0.2ex}{\,´} Thành,
+    \htt,
     \textit{Micro-typographic extensions to the \TeX{} typesetting system}
     (Masaryk University Brno, October 2000)}
 
