--- a/punctuation.tex
+++ b/punctuation.tex
@@ -1,6 +1,8 @@
 \chapter{Punctuation}
 \label{punctuation}
 
+END WITH WHAT'S NEXT CHAPTER?
+
 Quotes, hyphens, dashes, ellipses, oh my!
 
 While we're at it, explain em and en spaces.
