--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -38,7 +38,8 @@ to split paragraphs into lines.\punckern\footnote{This is because
 ``The computer doesn't have enough high-speed memory capacity to remember the
 contents of several pages,
 so \TeX{} simply chooses each page break as best it can, by a process of
-`local' rather than `global' optimization.\quotekern''\,\endnote{Ibid, 110}}
+`local' rather than `global' optimization.\quotekern''\,\endnote{Knuth,
+\textit{The \TeX book}, 110}}
 You can increase the ``penalty'' for doing so in order to make \LaTeX{}
 try harder to avoid it\footnote{When considering a given layout,
 \LaTeX{} assigns penalties, or ``badness''\quotekern,
