No "What's Next" chapter
Stuff that stuff in the references.

--- a/back.tex
+++ b/back.tex
@@ -1,4 +1,4 @@
-\setlength\parskip{\baselineskip}
+\setlength\parskip{0.75\baselineskip}
 \setlength\parindent{0pt}
 
 \chapter{Additional Resources}
@@ -6,20 +6,34 @@
 
 \section{For \texorpdfstring{\LaTeX}{LaTeX}}
 
-\begin{adjustwidth}{1.5em}{0pt}
-The \LaTeX{} Wikibook. \\
-Available at \url{https://en.wikibooks.org/wiki/LaTeX}
+As promised at the start, this book is incomplete.
+To keep things short,
+entire \LaTeX{} features---like figures, captions, references,
+and graphics---haven't been mentioned.
+Use some of these resources to fill in the gaps,
+or as more thorough references:
 
-\textit{The Not So Short Introduction to \LaTeX}. \\
-Available at \url{https://www.ctan.org/tex-archive/info/lshort/english/}
+\begin{adjustwidth}{1.5em}{0pt}
+The \LaTeX{} Wikibook, at \url{https://en.wikibooks.org/wiki/LaTeX}
+
+The \TeX{} Stack Exchange, at \url{https://tex.stackexchange.com/}
+
+\textit{The Not So Short Introduction to \LaTeX}, \\
+available at \url{https://www.ctan.org/tex-archive/info/lshort/english/}
+
+The Share\LaTeX{} knowledge base, at \url{https://www.sharelatex.com/learn}
+
 \end{adjustwidth}
-\vspace{0.3in}
 
 \section{For typography}
 
+We've also spent very little time here discussing how you \emph{should} use
+\LaTeX{} to create quality typography.
+Read on:
+
 \begin{adjustwidth}{1.5em}{0pt}
 \textit{Practical Typography}, by Matthew Butterick. \\
-Available at \url{https://practicaltypography.com}
+Available (for free!) at \url{https://practicaltypography.com}
 
 \textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spikermann
 
