--- a/structure.tex
+++ b/structure.tex
@@ -128,7 +128,7 @@ by placing \verb|\tableofcontents| at the start of the document body.
 As promised, this book isn't a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
 See Appendix~\ref{resources} for good, general \LaTeX{} resources.
-We'll also wrap up each chapter with some ideas you could look into next.
+We'll also wrap up most chapters with some ideas you could look into next.
 
 Consider learning how to:
 \begin{itemize}
