--- a/micro.tex
+++ b/micro.tex
@@ -1,7 +1,7 @@
 \chapter{Microtypography}
 
 \introduce{Microtypography} is the use of small, subliminal tweaks to improve
-the legibility of a document. It is
+a document's legibility, or:
 \begin{quote}
 [\ldots]the art of enhancing the appearance and readability of a
 document while exhibiting a minimum degree of visual obtrusion.
@@ -19,7 +19,7 @@ R Schlicht,
 
 In \LaTeX{}, microtypography is enabled and controlled via the
 \texttt{microtype} package.
-Its use is automatic---for the vast majority of documents, you add
+Its use is automatic---for the vast majority of documents, you should add
 \begin{leftfigure}
 \begin{lstlisting}
 \usepackage{microtype}
@@ -45,19 +45,18 @@ be made slightly taller than ``flat'' ones (such as H and T) for all
 to appear the same height.\punckern\endnote{%
 Jost Hochuli, \textit{Detail in typography} (Éditions~B42, 2015), 18--19}}
 \texttt{microtype} \introduce{protrudes} punctuation and other smaller
-characters into the margins slightly to compensate.
+characters into the margins to compensate.
 
 \section{Font expansion}
 
 To assist \LaTeX's justification algorithm,
 \texttt{microtype} can
-stretch or shrink characters horizontally if
-this helps produce a better layout, e.g.,
-one with more even spacing, or fewer lines which end in hyphens.
+stretch or shrink characters horizontally to produce a better layout,
+e.g., one with more even spacing, or fewer hyphenated lines.
 You might think that distorting character shapes this way would be immediately
 noticeable to the reader,
-but you're reading an entire book that is justified this way!
-\texttt{microtype} applies font expansion \emph{very} slightly---by default,
+but you're reading an book that does this on every page!
+Font expansion is applied \emph{very} slightly---by default,
 character widths are changed by no more than 2\%.\punckern\footnote{Of course,
 you can use package options to change this limit,
 or disable the feature entirely.}
@@ -65,6 +64,10 @@ or disable the feature entirely.}
 Note that this feature isn't currently available with \XeLaTeX{}.
 You'll need to use \LuaLaTeX{} if you want to take advantage of it.
 
-\section{Other stuff}
+\section{What next?}
 
-TODO other features and why you don't need them
+As always, see the package manual for ways these features can be tweaked.
+\texttt{microtype} is capable of a few other tricks,
+but many only work on older \LaTeX{} engines.\punckern\footnote{i.e., pdf\TeX}
+Those we do care about----such as letterspacing---can be handled with
+\texttt{fontspec} or other packages.
